@@ -513,8 +513,8 @@ Disassembly of section .text:
 0[0-9a-f]+ <[^>]+> f815 f930 	pld	\[r5\], #-48
 0[0-9a-f]+ <[^>]+> f815 ff30 	pld	\[r5, #48\]!
 0[0-9a-f]+ <[^>]+> f815 fd30 	pld	\[r5, #-48\]!
-0[0-9a-f]+ <[^>]+> f815 f000 	pld	\[r5, r0\]
-0[0-9a-f]+ <[^>]+> f819 f000 	pld	\[r9, r0\]
+0[0-9a-f]+ <[^>]+> f815 f004 	pld	\[r5, r4\]
+0[0-9a-f]+ <[^>]+> f819 f00c 	pld	\[r9, ip\]
 0[0-9a-f]+ <[^>]+> f89f f006 	pld	\[pc, #6\]	; 0+5ba <[^>]+>
 0[0-9a-f]+ <[^>]+> f81f f02a 	pld	\[pc, #-42\]	; 0+58e <[^>]+>
 0[0-9a-f]+ <[^>]+> e9d5 2300 	ldrd	r2, r3, \[r5\]
